# AI-Resume-Builder

./: .gitignore  README.md  main.py  model.ipynb  pyproject.toml
app/: model.ipynb
builders/: docx_builder.py  pdf_extractor.py
schema/: resume_schema.json  schema.py
