[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "groq>=1.1.1",
    "jupyter>=1.1.1",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
