[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "groq>=1.1.1",
    "jupyter>=1.1.1",
    "openai>=2.29.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "builders*", "schema*"]
